jenkins-master/kubernetes/jenkins-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
