jenkins-master/kubernetes/jenkins-svc.yaml
# Services
kind: Service
apiVersion: v1
metadata:
    name: jenkins-master
    namespace: jenkins
spec:
    selector:
        app: jenkins-master
    ports:
        - port: 50000
          protocol: TCP
          targetPort: 50000
          name: slaves
        - port: 80
          protocol: TCP
          targetPort: 8080
          name: ui
---
# Create the ingress resource
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ui
  namespace: jenkins
spec:
  rules:
  - host: jenkins.apps.az.olly.dtcntr.net
    http:
      paths:
      - backend:
          serviceName: jenkins-master
          servicePort: 80
